--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,67 @@
-.App {
-  text-align: center;
-}
+@import './fonts/fonts.css'
 
+.App {
+  margin: 0;
+  font-family: Roboto;
+  background-color: #EFEFEF;
+}
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+ 
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  //font-family: Roboto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 40px;
 }
-
-.App-link {
-  color: #61dafb;
+  .App-header-navbar {
+    display: flex;
+    align-self: center;
+  }
+  .App-header-navbar a{
+    display: inline-flex;
+  }
+  .App-header-navbar a:nth-child(2) {
+    margin-left: 80px;
+  }
+  .App-header-navbar a:nth-child(3) {
+    margin-left: 15vw;
+  }
+  
+.column-left {
+  width: 50%;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .icon-menu {
+    border: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    &:focus {
+        outline: none;
+    }
   }
-  to {
-    transform: rotate(360deg);
+  .icon-plane {
+    border: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    margin-left: 25px;
+    &:focus {
+        outline: none;
+    }
   }
+  .navbar-icon {
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+  }
+  
+.column-right {
+  width: 50%; 
 }
