--- a/src/Components/header/header.css
+++ b/src/Components/header/header.css
@@ -1,12 +1,13 @@
 .App-header {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around;
+	justify-content: space-between;
 	margin-top: 40px;
-	&-logo {
+	&__logo {
 		border: 0;
 		padding: 0;
 		background-color: transparent;
 		cursor: pointer;
+		margin-left: 100px;
 	}
 }
